--- a/style.css
+++ b/style.css
@@ -649,6 +649,7 @@ footer{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    z-index: 2;
 }
 .modal-content {
     background: white;
